Nuevas mejoras multisite y licencias

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14085,7 +14085,7 @@ form .btn {
 }
 
 .fondo-rojo {
-  background-color: #C23334 !important;
+  background-color: #00276f !important;
   color: #FFFFFF !important;
 }
 
@@ -14095,7 +14095,7 @@ form .btn {
 }
 
 .color-rojo {
-  color: #C23334 !important;
+  color: #00276f !important;
 }
 
 .color-negro {
@@ -14103,12 +14103,12 @@ form .btn {
 }
 
 .borde-rojo {
-  border-color: #C23334 !important;
+  border-color: #00276f !important;
 }
 
 .form-check-input:checked {
-  border-color: #C23334 !important;
-  background-color: #C23334 !important;
+  border-color: #00276f !important;
+  background-color: #00276f !important;
 }
 
 .table-image td, .table-image th {
@@ -14165,7 +14165,7 @@ form .btn {
 }
 
 .form-select option[selected] {
-  background-color: #C23334 !important; /* Change this color to your desired background color */
+  background-color: #00276f !important; /* Change this color to your desired background color */
   color: #FFF !important; /* Change this color to your desired text color */
 }
 
@@ -14254,4 +14254,10 @@ form .btn {
 
 .form-check-label {
   margin-right: 10px;
+}
+
+.readonly {
+  pointer-events: none; /* Desactiva la interacción del usuario */
+  background-color: #e9ecef; /* Color de fondo */
+  border-color: #ced4da; /* Color del borde */
 }
