--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,3 +67,20 @@ table{
     border-collapse: collapse;
 }
 
+.circulo-izquierda::before {
+    content: ""; /* Agrega el símbolo de check */
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 0 0 0 100px;
+    background-color: blue;
+    color: white; /* Color del check */
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centra el check en el círculo */
+    font-size: 15px; /* Tamaño del check */
+  }
+
+
