--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14111,7 +14111,7 @@ form .btn {
 }
 
 .icoDescarga {
-  background-color: #000;
+  background-color: #fff;
   padding: 0;
   font-size: 1.2em;
   margin: 0;
