--- a/public/css/eldespiste.css
+++ b/public/css/eldespiste.css
@@ -14106,7 +14106,7 @@ form .btn {
 }
 
 .icoDescarga {
-  background-color: #000;
+  background-color: #fff;
   padding: 0;
   font-size: 1.2em;
   margin: 0;
