--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,7 +56,7 @@ form .btn{
     color:#FFFFFF !important;
 }
 .icoDescarga{
-    background-color: #000;
+    background-color: #fff;
     padding: 0;
     font-size: 1.2em;
     margin: 0;
