--- a/resources/sass/eldespiste.scss
+++ b/resources/sass/eldespiste.scss
@@ -52,7 +52,7 @@ form .btn{
     width: 40px;
 }
 .icoDescarga{
-    background-color: #000;
+    background-color: #fff;
     padding: 0;
     font-size: 1.2em;
     margin: 0;
