--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22601,6 +22601,7 @@ button.btn.btn-borrar-min.btn-danger {
   background: none;
   border: 0;
   color: rgb(33, 37, 41);
+  padding: 0 5px;
 }
 
 button.btn.btn-borrar-min.btn-danger i {
