--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8233,14 +8233,14 @@
   font-family: "Nunito";
   font-style: normal;
   font-weight: 400;
-  src: url("/fonts/nunito/Nunito-Regular.ttf") format("truetype");
+  src: url("/fonts/nunito/Nunito-Regular.ttf?v=281120252245") format("truetype");
 }
 
 @font-face {
   font-family: "Nunito";
   font-style: normal;
   font-weight: 700;
-  src: url("/fonts/nunito/Nunito-Bold.ttf") format("truetype");
+  src: url("/fonts/nunito/Nunito-Bold.ttf?v=281120252245") format("truetype");
 }
 
 /*!
